# FOEDAG

./: CMakeLists.txt  Makefile  code-coverage.sh
.github/workflows/: install_centos_dependencies_build.sh  main.yml
cmake/: cmake_tcl.txt
src/Compiler/: CMakeLists.txt  Compiler.cpp  Compiler.h  CompilerOpenFPGA.cpp  Design.cpp  Design.h
src/Compiler/Test/: compiler_main.cpp
src/Console/: CMakeLists.txt  ConsoleInterface.h  ConsolePlugin.cpp  ConsolePlugin.h  ConsolePluginGLobal.h  TclConsole.cpp  TclConsole.h  TclConsoleBuilder.cpp  TclConsoleWidget.cpp  TclConsoleWidget.h  TclWorker.cpp
src/Console/Test/: ConsoleTestUtils.h  TestingUtils.cpp  TestingUtils.h  console_main.cpp  console_standalone.cpp  console_test.cpp
src/Console/include/: qtclconsole.h
src/Console/src/: qtclconsole.cpp  qtclconsole.h  tclmain.cpp  tclnotify.cpp
src/DesignRuns/: CMakeLists.txt
src/Main/: CMakeLists.txt  ConsolePluginInterface.h  Foedag.cpp  Foedag.h  PluginManager.cpp  PluginManager.h  registerTclCommands.cpp
src/MainWindow/: main_window.cpp  main_window.h
src/NewFile/: CMakeLists.txt
src/NewProject/: CMakeLists.txt  add_constraints_form.cpp  create_file_dialog.cpp
src/NewProject/ProjectManager/: project_manager.cpp  project_manager.h
src/ProjNavigator/: CMakeLists.txt  add_file_dialog.cpp  add_file_form.cpp  add_file_form.h  add_file_form.ui  sources_form.cpp  sources_form.h  sources_form.ui  tcl_command_integration.cpp  tcl_command_integration.h
src/Tcl/: TclInterpreter.cpp
src/TextEditor/: CMakeLists.txt  editor.cpp  editor.h  text_editor.cpp  text_editor.h  text_editor_form.cpp  text_editor_form.h
tests/TestGui/: gui_console.tcl  gui_run_all.tcl
tests/TestInstall/: CMakeLists.txt
